# uipath-agenthack

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
LoanAdvisorReliabilityTests/: .gitignore  CrossCustomerSsnLeakTest.cs  project.json  project.uiproj
mandates/: loanadvisor.yaml
scripts/: sync_native_results.py
src/sentinel/: cli.py  dataset.py  dotenv.py  judges.py  llm.py  models.py  orchestrator_client.py  report.py  runner.py  scoring.py  target.py  test_manager.py  uipath_agent.py
src/sentinel/dimensions/: __init__.py  base.py  hallucination.py  injection.py  nondeterminism.py  pii_leak.py
tests/: test_cli.py  test_dataset.py  test_dimensions.py  test_dotenv.py  test_judges.py  test_llm.py  test_models.py  test_orchestrator_client.py  test_report.py  test_runner.py  test_scoring.py  test_smoke.py  test_sync_native_results.py  test_target.py  test_test_manager.py  test_uipath_agent.py  test_uipath_llm.py
